--- a/css/style.css
+++ b/css/style.css
@@ -117,17 +117,35 @@
 }
 
 /* MEDIA QUERIES */
-@media all and (max-width: 992px){
+@media all and (max-width: 768px){
   .wrapper-100{
     width: 100%;
   }
+  .adp-main-list ul{
+    font-size: 120%;
+    line-height: 40px;
+   }
+   .adp-deploy{
+    text-align: left;
+  }
 }
+
+@media all and (min-width: 769px) and (max-width: 1199px){
+  .adp-md-img img{
+    width: 90%;
+  } 
+}
+
+
 @media all and (min-width: 1200px){
   .adp-jumbo h2{
     padding-right: 7%;
   }
   .adp-jumbo p{
     padding-right: 7%;
+  }
+  .adp-deploy{
+    max-width: 360px;
   }
 }
 
@@ -241,13 +259,39 @@
   margin: 30px auto;
 }
 /* MAIN */
+
+/*Main - Deploy */
 .adp-main-list ul{
  list-style: none;
  text-align: left;
  border-left: 1px solid gray;
- padding-left: 5px;
+ padding-left: 15px;
+ margin-bottom: 20px;
+ color: gray;
+ line-height: 26px;
+}
+.adp-main-list ul li{
+  
+}
+.adp-deploy{
+  margin-bottom: 15px;
+}
+.adp-deploy-pad{
+  padding: 20px 0;
 }
 
+/* Main - designed */
+.adp-arrow-abs-left{
+  position: absolute;
+  top: 50%;
+  left: -5%;
+}
+
+.adp-arrow-abs-right{
+  position: absolute;
+  top: 50%;
+  right: -5%;
+}
 
 
 /* FOOTER */
@@ -255,8 +299,7 @@
 .adp-social ul li{
   list-style: none;
   display: inline-block;
-  margin: 20px 20px
-}
+  }
 
 .adp-social ul li a{
   text-decoration: none;
